# production-stack

./: .buildinfo  .codespell-ignore  .dockerignore  .gitignore  .hadolint.yaml  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  ACTUAL_BENCHMARK_RESULTS.md  AGENTS.md  BONSAI_TERNARY_MIG_PERFORMANCE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  Netflix second coding  README.md  README_WORKFLOW.md  SECURITY.md  TESTING_GUIDE.md  TEST_PROCESS.md  artifacthub-repo.yml  benchmark_test_results.md  deployment-bonsai-ternary.yaml  genindex.html  index.html  index.yaml  issue-244-analysis.md  issue-244-implementation-plan.md  mock_benchmark_results.json  mock_benchmark_test.py  objects.inv  parallel-agents-a2a-design.md  parallel-agents-implementation-example.md  perf_test.py  perf_test_continuous.py  pyproject.toml  requirements-test.txt  search.html  searchindex.js  setup.py  (+28 more)
.claude/: agents.md
.doctrees/: index.doctree
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  clean-port.sh  curl-01-minimal-example.sh  curl-02-two-pods.sh  curl-04-multiple-models.sh  curl-05-secure-vllm.sh  curl-06-monitoring.sh  dependabot.yml  port-forward.sh  router.yaml  template-chatml.jinja  values-01-2pods-minimal-example.yaml  values-04-multiple-models.yaml  values-05-secure-vllm.yaml  values-06-session-routing-llama.yaml  values-06-session-routing.yaml  values-07-prefix-routing.yaml  values-08-roundrobin-routing.yaml  values-09-kvaware-routing.yaml  values-10-disagg-prefill.yaml  values-11-monitoring.yaml  values-session-routing-llama.yaml
benchmarks/: multiround-qa.html  workflow_benchmark.py
community/: community-event.md  community_meeting_4pm.ics  community_meeting_8am.ics
deployment/: helm.html
docker/: Dockerfile  Dockerfile.kvaware  Dockerfile.pd  Dockerfile.sidecar
helm/: ct.yaml  (+8 more)
(+877 files in other folders)
